// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public API surface > exports of "." are stable 1`] = `
[
  "AGENTIC_BASE_URL",
  "AUTHORIZE_ENDPOINT",
  "AUTH_AUTHORITY",
  "AUTH_SCOPES",
  "AVAILABLE_ACTIONS",
  "ActionResult",
  "ActionStep",
  "Agent",
  "AgentsResponse",
  "AnalyticsAdapter",
  "AnalyticsErrorContext",
  "AnalyticsEventMap",
  "AnalyticsEventName",
  "AnalyticsEventProps",
  "AnalyticsIdentity",
  "ApiResponse",
  "AttachmentUploadResult",
  "AuthContext",
  "AuthMode",
  "BBApiError",
  "Bot",
  "BotDetail",
  "BrowserLoginResult",
  "BrowserRedirectOptions",
  "CapabilitiesResponse",
  "Capability",
  "ConversationDetail",
  "ConversationWebSearchSettings",
  "CreateNoteParams",
  "DEFAULTS",
  "GetMessageListOptions",
  "IdentityAdapter",
  "IntrospectResponse",
  "ListTenantsOptions",
  "ListTenantsResponse",
  "LoginOptions",
  "LoginResult",
  "MarkdownOptions",
  "MessageItem",
  "MessageListBody",
  "MessageStream",
  "NoteResult",
  "OAUTH_BACKEND_URL",
  "OAuthTokens",
  "ParsedResponse",
  "Profile",
  "SendMessageOptions",
  "SendMessageStreamOptions",
  "Settings",
  "StorageAdapter",
  "TOKEN_ENDPOINT",
  "TenantConfig",
  "TenantDetail",
  "TenantSummary",
  "Theme",
  "ThemeMode",
  "ThemePref",
  "ThemeToggle",
  "ThemeToggleProps",
  "TokenResult",
  "UpdateConversationPatch",
  "UploadAttachmentOptions",
  "WebSearchConfig",
  "WebSearchProvider",
  "WebSearchProviderStatus",
  "WebSearchType",
  "applyTheme",
  "authHeaders",
  "beginBrowserLogin",
  "captureError",
  "completeBrowserLogin",
  "computeExpiration",
  "configureLogo",
  "createConversation",
  "createLock",
  "createMessageStream",
  "createNote",
  "createRefreshGuard",
  "cycleTheme",
  "decodeJwtPayload",
  "decodePKCEState",
  "deleteConversation",
  "discoverFrontendUrls",
  "encodePKCEState",
  "exchangeCode",
  "extractCode",
  "extractJson",
  "extractOrgIdFromClaims",
  "extractOrgIdFromIntrospect",
  "extractProfile",
  "fetchAgents",
  "fetchBotDetail",
  "fetchBotList",
  "fetchCapabilities",
  "flushAnalytics",
  "generateChallenge",
  "generateStateNonce",
  "generateVerifier",
  "getAnalyticsAdapter",
  "getAuthContext",
  "getAvailableWebSearchProviders",
  "getConversationAttachments",
  "getConversationDetail",
  "getConversationWebSearch",
  "getMessageList",
  "getTenantById",
  "getTenantConfig",
  "hasUsableAuth",
  "inferAuthMode",
  "introspectApiKey",
  "invalidateConvoDetailCache",
  "isBBApiError",
  "isTokenExpired",
  "listTenants",
  "login",
  "markdownToHtml",
  "normalizeUrl",
  "parseResponse",
  "refreshTokens",
  "renderMarkdown",
  "renderMarkdownInto",
  "repairUnescapedQuotes",
  "resetAnalyticsAdapter",
  "runActions",
  "sendMessage",
  "setAgentActive",
  "setAgentAvailability",
  "setAnalyticsAdapter",
  "setCapabilityActive",
  "setCapabilityAvailability",
  "setConversationWebSearch",
  "setCustomAgentsEnabled",
  "subFromAccessToken",
  "themeIcon",
  "timeAgo",
  "trackApiError",
  "trackEvent",
  "transcribeAudio",
  "updateConversation",
  "uploadConversationAttachment",
  "useTheme",
  "wrapStringAsStream",
]
`;

exports[`public API surface > exports of "./actions" are stable 1`] = `
[
  "AVAILABLE_ACTIONS",
  "ActionResult",
  "ActionStep",
  "runActions",
]
`;

exports[`public API surface > exports of "./adapters" are stable 1`] = `
[
  "AnalyticsAdapter",
  "AnalyticsErrorContext",
  "AnalyticsEventMap",
  "AnalyticsEventName",
  "AnalyticsEventProps",
  "AnalyticsIdentity",
  "IdentityAdapter",
  "StorageAdapter",
]
`;

exports[`public API surface > exports of "./analytics" are stable 1`] = `
[
  "AnalyticsAdapter",
  "AnalyticsErrorContext",
  "AnalyticsEventMap",
  "AnalyticsEventName",
  "AnalyticsEventProps",
  "AnalyticsIdentity",
  "captureError",
  "flushAnalytics",
  "getAnalyticsAdapter",
  "resetAnalyticsAdapter",
  "setAnalyticsAdapter",
  "trackApiError",
  "trackEvent",
]
`;

exports[`public API surface > exports of "./api" are stable 1`] = `
[
  "Agent",
  "AgentsResponse",
  "ApiResponse",
  "AttachmentUploadResult",
  "BBApiError",
  "Bot",
  "BotDetail",
  "CapabilitiesResponse",
  "Capability",
  "ConversationDetail",
  "ConversationWebSearchSettings",
  "CreateNoteParams",
  "GetMessageListOptions",
  "IntrospectResponse",
  "ListTenantsOptions",
  "ListTenantsResponse",
  "MessageItem",
  "MessageListBody",
  "MessageStream",
  "NoteResult",
  "SendMessageOptions",
  "SendMessageStreamOptions",
  "TenantConfig",
  "TenantDetail",
  "TenantSummary",
  "UpdateConversationPatch",
  "UploadAttachmentOptions",
  "WebSearchConfig",
  "WebSearchProvider",
  "WebSearchProviderStatus",
  "WebSearchType",
  "authHeaders",
  "createConversation",
  "createMessageStream",
  "createNote",
  "deleteConversation",
  "discoverFrontendUrls",
  "extractOrgIdFromIntrospect",
  "fetchAgents",
  "fetchBotDetail",
  "fetchBotList",
  "fetchCapabilities",
  "getAvailableWebSearchProviders",
  "getConversationAttachments",
  "getConversationDetail",
  "getConversationWebSearch",
  "getMessageList",
  "getTenantById",
  "getTenantConfig",
  "introspectApiKey",
  "invalidateConvoDetailCache",
  "isBBApiError",
  "listTenants",
  "normalizeUrl",
  "sendMessage",
  "setAgentActive",
  "setAgentAvailability",
  "setCapabilityActive",
  "setCapabilityAvailability",
  "setConversationWebSearch",
  "setCustomAgentsEnabled",
  "transcribeAudio",
  "updateConversation",
  "uploadConversationAttachment",
  "wrapStringAsStream",
]
`;

exports[`public API surface > exports of "./auth" are stable 1`] = `
[
  "BrowserLoginResult",
  "BrowserRedirectOptions",
  "LoginOptions",
  "LoginResult",
  "Profile",
  "TokenResult",
  "beginBrowserLogin",
  "completeBrowserLogin",
  "computeExpiration",
  "createRefreshGuard",
  "decodeJwtPayload",
  "decodePKCEState",
  "encodePKCEState",
  "exchangeCode",
  "extractOrgIdFromClaims",
  "extractProfile",
  "generateChallenge",
  "generateStateNonce",
  "generateVerifier",
  "isTokenExpired",
  "login",
  "refreshTokens",
]
`;

exports[`public API surface > exports of "./config" are stable 1`] = `
[
  "AGENTIC_BASE_URL",
  "AUTHORIZE_ENDPOINT",
  "AUTH_AUTHORITY",
  "AUTH_SCOPES",
  "OAUTH_BACKEND_URL",
  "TOKEN_ENDPOINT",
]
`;

exports[`public API surface > exports of "./prompt" are stable 1`] = `
[
  "ParsedResponse",
  "parseResponse",
]
`;

exports[`public API surface > exports of "./react" are stable 1`] = `
[
  "BBClientProvider",
  "BBClientProviderProps",
  "BBKeys",
  "CreateBBQueryClientOptions",
  "UseChatStreamArgs",
  "UseChatStreamResult",
  "agentsQueryOptions",
  "bbKeys",
  "bbShouldRetryQuery",
  "botDetailQueryOptions",
  "botsQueryOptions",
  "capabilitiesQueryOptions",
  "conversationDetailQueryOptions",
  "createBBQueryClient",
  "messagesInfiniteOptions",
  "tenantConfigQueryOptions",
  "useAgents",
  "useBBContext",
  "useBotDetail",
  "useBots",
  "useCapabilities",
  "useChatStream",
  "useConversationAttachments",
  "useConversationDetail",
  "useConversationWebSearch",
  "useCreateConversation",
  "useCreateNote",
  "useDeleteConversation",
  "useMessages",
  "useSetAgentActive",
  "useSetAgentAvailability",
  "useSetCapabilityActive",
  "useSetCapabilityAvailability",
  "useSetCustomAgentsEnabled",
  "useTenantConfig",
  "useUpdateConversation",
  "useWebSearchProviders",
]
`;

exports[`public API surface > exports of "./settings" are stable 1`] = `
[
  "AuthContext",
  "AuthMode",
  "DEFAULTS",
  "OAuthTokens",
  "Settings",
  "getAuthContext",
  "hasUsableAuth",
  "inferAuthMode",
]
`;

exports[`public API surface > exports of "./ui" are stable 1`] = `
[
  "MarkdownOptions",
  "Theme",
  "ThemeMode",
  "ThemePref",
  "ThemeToggle",
  "ThemeToggleProps",
  "applyTheme",
  "configureLogo",
  "cycleTheme",
  "markdownToHtml",
  "renderMarkdown",
  "renderMarkdownInto",
  "themeIcon",
  "timeAgo",
  "useTheme",
]
`;

exports[`public API surface > exports of "./utils" are stable 1`] = `
[
  "createLock",
  "extractCode",
  "extractJson",
  "repairUnescapedQuotes",
  "subFromAccessToken",
]
`;
